fixed searchicon position and size, fixed categories on small screens, fixed sidebar on small screens

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,9 @@
+@import 'https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Charm:wght@400;700&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Charm:wght@400;700&family=Sen:wght@400..800&display=swap';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import 'https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Charm:wght@400;700&display=swap';
-
-@import 'https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Charm:wght@400;700&family=Sen:wght@400..800&display=swap';
 
 :root {
   --primary-color: #e4b022;
@@ -398,7 +397,7 @@
   @apply absolute w-[127px] h-[127px] md:w-[170px] md:h-[170px] rounded-full border-2 border-[var(--primary-color)];
 }
 
-@media (max-width: 767px) {
+@media (min-width: 385px) and (max-width: 767px) {
   .sidebar-styles {
     @apply flex flex-col gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
   }
@@ -463,7 +462,7 @@
   }
 
   .sidebar-height-when-closed {
-    @apply pb-32  top-0 bottom-0 pt-0 overflow-y-visible;
+    @apply h-[120px] mt-[-80px] pb-[210px] top-0 bottom-0 pt-0 overflow-y-visible;
   }
 
   .sidebar-height-when-open {
@@ -513,9 +512,110 @@
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
   }
+
+  .desktop-category-div {
+  @apply hidden;
+}
+  .sidebar-li-layout {
+  @apply flex flex-row items-center ;
+  }
 }
 
 @media (max-width: 384px) {
+
+   .sidebar-styles {
+    @apply flex flex-col gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
+  }
+
+  .sidebar-li-layout {
+  @apply flex flex-row items-center ;
+  }
+
+
+  .h1-home-box {
+    @apply mt-[150px] mb-8;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+
+  .auth-main {
+    @apply mt-20;
+  }
+
+  .search-category-box {
+    @apply h-[50px] gap-4 pt-4;
+  }
+
+  .hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+    .header-styles {
+    @apply flex flex-row h-40;
+  }
+
+  .header-styles-other-pages {
+    @apply flex flex-row h-24 border-none;
+  }
+
+  .mobile-select {
+    @apply block border w-[200px] text-white px-2 py-1 rounded !important;
+    visibility: visible;
+    z-index: 1;
+    position: relative;
+    appearance: none;
+  }
+
+  .mobile-select:focus {
+    position: relative;
+    z-index: 10;
+  }
+
+  .logo-margin-logged-in-closed {
+    @apply mt-[600px];
+  }
+
+  .desktop-select {
+    @apply hidden;
+  }
+
+  .nav-menu {
+    @apply flex flex-col items-center justify-center gap-4 pt-2 pb-2 ;
+  }
+
+  .nav-styles {
+    @apply flex flex-col items-center justify-center gap-2 ;
+  }
+
+  .sidebar-height-when-closed {
+    @apply h-[120px] mt-[-80px] pb-[210px]  top-0 bottom-0 pt-0 overflow-y-visible;
+  }
+
+  .sidebar-height-when-open {
+    @apply h-auto;
+  }
+
+.nav-styles-hover {
+    @apply flex flex-col items-start justify-center gap-2;
+  }
+
+  .nav-hover {
+    @apply w-[150px];
+  }
+
+  .logo-top-margin {
+    @apply mt-[360px];
+  }
+
+  .logo-no-margin {
+    @apply mt-0;
+  }
+
   .Categories {
     width: 295px;
     height: 300px;
@@ -543,4 +643,8 @@
   .listing-container-styles {
     @apply h-[640px] w-[250px];
   }
+
+  .desktop-category-div {
+  @apply hidden;
+}
 }
